# Plan-Reviewer

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  PROGRESS.md  PROGRESS_SUMMARY.md  README.md  plan_reviewer.py  requirements.txt
.claude/: launch.json  settings.local.json
.cursor/rules/: progress-logging.mdc
.githooks/: pre-commit
.github/workflows/: progress-docs-check.yml
References/cc-crossbeam-main/: .gitignore  CC-DEMO.md  CC-PLAN-SUPABASE-REALTIME-FIX.md  CC-PROGRESS.md  CC-README.md  LICENSE
docs/: CODEX-TASK-002-OPTIMIZATION.md  CODING-SPEC-INTAKE-PIPELINE.md  PROGRESS_LOGGING_PROTOCOL.md
docs/diagrams/: ARCHITECTURE_FLOWS.md  app-architecture.md  app-architecture.mmd  extraction-decision-flow.md  extraction-decision-flow.mmd
docs/findings/: PHASE1-VISION-FINDINGS.md
legacy/docs/: CODEX-TASK-003-GRAPH-FIXES.md  CODEX-TASK-004-GRAPH-ORIENTATION-AND-PROXIMITY-MERGE.md  CODEX-TASK-005-HTML-REPORT.md  CODEX-TASK-006-CROWN-INVERT-HEURISTIC.md  CODEX-TASK-007-REFERENCE-SHEET-SUPPRESSION.md  CODEX-TASK-008-NULL-PAGE-NUMBER-RECOVERY.md  (+1 more)
legacy/iteration-1-streamlit/: README.md  plan_reviewer.py  pyproject.toml
scripts/: check_progress_docs.py  setup_progress_hook.ps1
src/: __init__.py  config.py  pipeline.py
tests/: test_e2e_pipeline.py  test_graph_assembly.py  test_graph_checks.py  test_graph_merge.py  test_graph_package_gate.py  test_html_report.py  test_io_json.py  test_manifest.py  test_package_contract.py  test_parsing.py  test_pipeline.py  test_run_hybrid_batch_contract.py  test_run_hybrid_escalation.py  test_validate_package.py
(+1058 files in other folders)
