[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plan-reviewer"
version = "0.1.0"
description = "AI-assisted civil engineering plan set review pipeline."
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "Dylan" },
]
dependencies = [
  "streamlit==1.54.0",
  "pymupdf==1.27.1",
  "python-dotenv==1.2.1",
  "requests==2.32.5",
  "pydantic==2.12.5",
  "networkx==3.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
plan-reviewer-intake = "intake.tiler:main"
plan-reviewer-text-layer = "intake.text_layer:main"
plan-reviewer-manifest = "intake.manifest:main"
plan-reviewer-batch-extract = "extraction.run_hybrid_batch:main"
plan-reviewer-graph = "graph.assembly:main"
plan-reviewer-report = "report.html_report:main"

